Bug fixes/feedback:
Pop_Shop: Fix changes/description text background
Frames: Fix invisible frames in about dialogs.

--- a/src/gtk3/common/scss/apps/_pop-shop.scss
+++ b/src/gtk3/common/scss/apps/_pop-shop.scss
@@ -8,7 +8,7 @@
 
 // Appcenter uses textviews for displaying App info/changelogs
 window.csd > stack > stack.view {
-  > grid.horizontal > overlay > viewport.frame > grid.horizontal {
+  > grid.horizontal > overlay viewport.frame > grid.horizontal {
     > grid.vertical {
       textview.view text,
       grid.horizontal > list {
