--- a/src/gtk3/common/scss/gtk-widgets/_frames.scss
+++ b/src/gtk3/common/scss/gtk-widgets/_frames.scss
@@ -50,3 +50,7 @@ undershoot,
     box-shadow: none;
   }
 }
+
+viewport.frame {
+  background-color: $bg_color;
+}
