--- a/src/gtk3/common/scss/gtk-widgets/_textview.scss
+++ b/src/gtk3/common/scss/gtk-widgets/_textview.scss
@@ -10,4 +10,9 @@ textview,
 textview text {
   background-color: $base_color;
   color: $fg_color;
+  
+  &.view,
+  &.view text{
+    background-color: $bg_color;
+  }
 }
